<resources>
    <string name="Mon">一</string>
    <string name="Tue">二</string>
    <string name="Wed">三</string>
    <string name="Thu">四</string>
    <string name="Fri">五</string>
    <string name="Sat">六</string>
    <string name="Sun">日</string>
    <string name="cancell">取消</string>
    <string name="error_net">网络错误！</string>
    <string name="error_net_notify">是否重试！</string>
    <string name="error_net_disable">网络不可用，请设置网络!</string>
    <string name="select_date">选择日期</string>
    <string name="dialog_title">处理中</string>
    <string name="dialog_contnet">请稍候..</string>
    <string name="no_device_found">NO DEVICE FOUND!</string>
    <string name="groupname_cannot_same">Group names cannot be the same !</string>
    <string name="app_name">LED BLE</string>
    <string name="app_name_htune">Htune</string>
    <string name="rhythm">Rhythm:</string>
    <string name="decibel">Decibel:</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="setting">Wifi Connection -></string>
    <string name="connect_success">Connect successfully!</string>
    <string name="tab_reg">RGB</string>
    <string name="tab_dm">WHT DIM</string>
    <string name="tab_ct">CT</string>
    <string name="tab_music">MUSIC</string>
    <string name="tab_record">RECORD</string>
    <string name="tab_music_record"> MUSIC    RECORD</string>
    <string name="tab_timer">TIMER</string>
    <string name="tab_setting">SETING</string>
    <string name="tab_timer_title">Timer</string>
    <string name="tab_record_title">Record</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_set">Brightness: %1$s </string>
    <string name="speed">Speed</string>
    <string name="speed_set">Speed: %1$s </string>
    <string name="sensitivity">Sensitivity</string>
    <string name="sensitivity_set">ensitivity: %1$s%% </string>
    <string name="current_mode">Current Mode</string>
    <string name="current_mode_format">Current Mode: %1$s</string>
    <string name="cool_warm">White\nWarm: %1$s Cool: %2$s</string>
    <string name="r_g_b">R:%1$s G:%2$s B:%3$s</string>
    <string name="play_music">Play Music</string>
    <string name="set_up">SETUP</string>
    <string name="jump">Jump</string>
    <string name="breathe">Breathe</string>
    <string name="flash">Flash</string>
    <string name="gradient">Gradient</string>
    <string name="edit">EDIT</string>
    <string name="music_style_pop">Pop</string>
    <string name="music_style_soft">Soft</string>
    <string name="music_style_rock">Rock</string>
    <string name="music_lib">music lib</string>
    <string name="un_known_artist">un_known_artist</string>
    <string name="add2lib">Confirm select</string>
    <string name="add2lib_all">Select all</string>
    <string name="select_play_list">You must chose play list content</string>
    <string name="single_click_select_color">Single click chose Color, Long click delete color</string>
    <string name="back">BACK</string>
    <string name="run">RUN</string>
    <string name="confirm">CONFIRM</string>
    <string name="ablum_title" formatted="false">music name:%1$s from artist:%2$s Album: %3$s</string>
    <string name="chose_list">please select play list from music lib</string>
    <string name="not_found_target_wifi"> not found target wifi</string>
    <string name="not_found_target_wifi_notify">please confirm led light well installed</string>
    <string name="not_found_target_wifi_retry">Retry</string>
    <string name="set_auto_search_wifi_name">set auto search wifi name</string>
    <string name="set_auto_search_wifi_name_here">set auto search wifi name here</string>
    <string name="set_auto_search">save</string>
    <string name="select_target_wifi">select target wifi to connect </string>
    <string name="auto_seach">auto search</string>
    <string name="open_wifi_select">Reconnect</string>
    <string name="can_not_connect">May be wrong WIFI, Reconnect 3 seconds later or reselect other WIFI!</string>
    <string name="set">setting</string>
    <string name="right_wifi_notify">Right wifi name usually start with FC_</string>
    <string name="select_wifi_connect">select device wifi connect</string>
    <string name="connect_device_wifi_fist">connect device\'s wifi first </string>
    <string name="notify_divce"> Please confirm your device is well installed and have power!</string>
    <string name="NOTICE"> NOTICE!</string>
    <string name="ring">RING</string>
    <string name="model">MODE</string>
    <string name="custom">CUSTOM</string>
    <string name="error_retry">Error,Please Retry!</string>
    <string name="current_connect">connecting</string>
    <string name="retry_wifi">Retry!</string>
    <string name="diy_wifi">Select wifi connect</string>
    <string name="connect_fail"> Connect fail please retry or reselect other wifi to try!</string>
    <string name="help">HELP:</string>
    <string name="hled1">Step 1:Confirm the LED controller is turned on.</string>
    <string name="hled2">Step 2:Open your phone ,Find the WLAN named FC_xxx and connect it.</string>
    <string name="hled3">Step 3:Use this App to control your LED light changing light color.</string>
    <string name="devices_all">ALL DEVICES</string>
    <string name="devices_myself">user define</string>
    <string name="all_on">all on</string>
    <string name="all_off">all off</string>
    <string name="add_group">add new group</string>
    <string name="system_device">system</string>
    <string name="define_system">user define</string>
    <string name="please_input">New Group Name</string>
    <string name="ble_not_supported">Not support Device</string>
    <string name="bind_end">CONFIRM</string>
    <string name="device_list">device list</string>
    <string name="cancell_dialog">CANCEL</string>
    <string name="delete_group">delete group %1$s</string>
    <string name="tips">Tips</string>
    <string name="help_ble">HELP</string>
    <string name="group_ble">GROUP</string>
    <string name="edit_group_please">Please edit group devices first</string>
    <string name="scan_no_device">Not found deviecs please wait or refresh!</string>
    <string name="conenct_device" formatted="false">%1$s Devices Available; %2$s Connected.</string>
    <string name="press_again_exit"> Press again to exit </string>
    <string name="connect_count">%1$s device</string>
    <string name="refresh">refreshing</string>
    <string name="reset_power">If power is removed from the control box the timer will need to be reset!</string>
    <string name="timer_on">timer on</string>
    <string name="timer_off">timer off</string>
    <string name="save">Save</string>
    <string name="hour">HOUR</string>
    <string name="minute">MINUTE</string>
    <string name="all_ble_device">all devices</string>
    <string name="group_ble_device">Groups</string>
    <string name="please_confirm_connect_device">please confirm devices are online and opened </string>
    <string name="please_input_alias">please input alias</string>
    <string name="alias_is_empty">alias is emtpty</string>
    <string name="please_close_music">Please close music</string>
    <string name="microphone_start">Microphone Start</string>
    <string name="pause_microphone">Pause Microphone</string>
    <string-array name="rgb_mode">
        <item>Static red,128</item>
        <item>Static blue,129</item>
        <item>Static green,130</item>
        <item>Static cyan,131</item>
        <item>Static yellow,132</item>
        <item>Static purple,133</item>
        <item>Static white,134</item>
        <item>Tricolor jump,135</item>
        <item>Seven-color jump,136</item>
        <item>Tricolor gradient,137</item>
        <item>Seven-color gradient,138</item>


        <item>Red gradient,139</item>
        <item>Green gradient,140</item>
        <item>Blue gradient,141</item>
        <item>Yellow gradient,142</item>
        <item>Cyan gradient,143</item>
        <item>Purple gradient,144</item>
        <item>White gradient,145</item>
        <item>Red-Green gradient,146</item>
        <item>Red-Blue gradient,147</item>
        <item>Green-Blue gradient,148</item>

        <item>Seven-color flash,149</item>
        <item>Red flash,150</item>
        <item>Green flash,151</item>
        <item>Blue flash,152</item>
        <item>Yellow flash,153</item>
        <item>Cyan flash,154</item>
        <item>Purple flash,155</item>
        <item>White flash,156</item>


    </string-array>
    <string-array name="ct_mode" formatted="false">
        <item>Warm 0% Cool 100%,128</item>
        <item>Warm 10% Cool 90%,129</item>
        <item>Warm 20% Cool 80%,130</item>
        <item>Warm 30% Cool 70%,131</item>
        <item>Warm 40% Cool 60%,132</item>
        <item>Warm 50% Cool 50%,133</item>
        <item>Warm 60% Cool 40%,134</item>
        <item>Warm 70% Cool 30%,135</item>
        <item>Warm 80% Cool 20%,136</item>
        <item>Warm 90% Cool 10%,137</item>
        <item>Warm 100% Cool 0%,138</item>
    </string-array>
    <string-array name="timer_model" formatted="false">
        <item>Static red,0</item>
        <item>Static blue,1</item>
        <item>Static green,2</item>
        <item>Static cyan,3</item>
        <item>Static yellow,4</item>
        <item>Static purple,5</item>
        <item>Static white,6</item>
        <item>Tricolor jump,7</item>
        <item>Seven-color jump,8</item>
        <item>Tricolor gradient,9</item>
        <item>Seven-color gradient,10</item>
        <item>Warm 0% Cold 100%,11</item>
        <item>Warm 10% Cold 90%,12</item>
        <item>Warm 20% Cold 80%,13</item>
        <item>Warm 30% Cold 70%,14</item>
        <item>Warm 40% Cold 60%,15</item>
        <item>Warm 50% Cold 50%,16</item>
        <item>Warm 60% Cold 40%,17</item>
        <item>Warm 70% Cold 30%,18</item>
        <item>Warm 80% Cold 20%,19</item>
        <item>Warm 90% Cold 10%,20</item>
        <item>Warm 100% Cold 0%,21</item>
    </string-array>
    <string-array name="dm_mode">
        <item>0%,128</item>
        <item>10%,129</item>
        <item>20%,130</item>
        <item>30%,131</item>
        <item>40%,132</item>
        <item>50%,133</item>
        <item>60%,134</item>
        <item>70%,135</item>
        <item>80%,136</item>
        <item>90%,137</item>
        <item>100%,138</item>
    </string-array>
    <string-array name="rgb_model">
        <item>RGB,1</item>
        <item>RBG,2</item>
        <item>GRB,3</item>
        <item>GBR,4</item>
        <item>BRG,5</item>
        <item>BGR,6</item>
    </string-array>
    <string-array name="light_banner">
        <item>LPD6803,1</item>
        <item>TM1803,2</item>
        <item>UCS1903,3</item>
        <item>WS2811,4</item>
        <item>TM1812,5</item>
        <item>TM1809,6</item>
        <item>WS2801,7</item>
        <item>TLS3001,8</item>
        <item>TLS3008,9</item>
        <item>P9813,10</item>
        <item>UCS8806,11</item>
        <item>TM1829,12</item>
        <item>TM1909,13</item>
    </string-array>
</resources>