<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/realativeLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_alignParentTop="true"
        android:background="@drawable/tab_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/device_list"
            android:textSize="@dimen/text_size3" />

        <TextView
            android:id="@+id/textViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_content"
            android:text="@string/back"
            android:textColor="@color/blue_text_color"
            android:textSize="@dimen/text_size3" />
    </RelativeLayout>

    <Button
        android:id="@+id/buttonFireBind"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/bind_end" />

    <ListView
        android:id="@+id/listViewDevices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonFireBind"
        android:layout_below="@id/realativeLayoutHeader"
        android:scrollbars="none" />

</RelativeLayout>