<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:slideswitch="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0eff5"
    android:gravity="center_horizontal|top"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutBottom"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonAllOn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/all_on"
            android:textSize="@dimen/text_size2" />

        <Button
            android:id="@+id/buttonAllOff"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/all_off"
            android:textSize="@dimen/text_size2" />

        <Button
            android:id="@+id/buttonAddGroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_group"
            android:textSize="@dimen/text_size2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/linearLayoutBottom"
        android:orientation="vertical" >
        
        <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="@dimen/tab_height"
	        android:background="@color/white">

	        <TextView
		        android:id="@+id/tvTitle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerInParent="true"
		        android:textColor="@color/black"
		        android:textSize="16sp" 
		        android:text="@string/group_ble_device"/>
	        
	        <ImageView 
	            android:id="@+id/ivRefresh"
		        android:layout_width="28dp"
		        android:layout_height="28dp"
		        android:layout_centerVertical="true"
		        android:layout_alignParentRight="true"
		        android:layout_marginRight="16dp"
		        android:src="@drawable/img_refresh"/>
        
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_big"
            android:layout_marginLeft="@dimen/margin_content_big"
            android:layout_marginTop="@dimen/margin_content"
            android:gravity="center_vertical|left"
            android:text="@string/system_device"
            android:textColor="#7c7b81"
            android:textSize="@dimen/text_size3" />

        <View
            android:id="@+id/viewBottomLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cdccd1" />

        <LinearLayout
            android:id="@+id/linearLayoutTopItem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/group_height"
            android:background="@drawable/btn_item_group"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imageViewFlagImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bg_ble_group" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/group_height"
                android:layout_weight="3"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/margin_content_big"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/devices_all"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size3" />

                <TextView
                    android:id="@+id/textViewAllDeviceIndicater"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/margin_content_big"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size3" />
            </LinearLayout>
            
            <com.ledble.view.SlideSwitch 
			        android:id="@+id/slideSwitch"
			        android:layout_width="48dp"
			        android:layout_height="28dp"
			        android:layout_marginEnd="6dp"
			        slideswitch:shape="circle"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal" 
                android:visibility="gone">

                <ToggleButton
                    android:id="@+id/toggleButtonDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/imageViewControll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_go_control" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cdccd1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_big"
            android:layout_marginLeft="@dimen/margin_content_big"
            android:layout_marginTop="@dimen/margin_content"
            android:gravity="center_vertical|left"
            android:text="@string/define_system"
            android:textColor="#7c7b81"
            android:textSize="@dimen/text_size3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cdccd1" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/linearLayoutDefineGroups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>