<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.common.view.Segment
        android:id="@+id/segmentStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        app:bgseg1="@drawable/bg_seg_new1"
        app:bgseg2="@drawable/bg_seg_new2"
        app:bgseg3="@drawable/bg_seg_new3"
        app:check_text_color="@color/white"
        app:normal_text_color="#7e868e"
        app:seg1_text="@string/music_style_pop"
        app:seg2_text="@string/music_style_soft"
        app:seg3_text="@string/music_style_rock"
        app:seg_text_size="@dimen/label_text_size_second" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/margin_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvRhythm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/rhythm"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <SeekBar
                    android:id="@+id/seekBarRhythm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="70"
                    android:thumb="@drawable/slider_thumb" />
            </LinearLayout>
            
            <TextView
                android:id="@+id/tvrhythmValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp" 
                android:text="0"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/imageViewEdit"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/tab_reg_check" />
        </LinearLayout>

        <!-- <LinearLayout -->
        <!-- android:layout_width="fill_parent" -->
        <!-- android:layout_height="0dp" -->
        <!-- android:layout_weight="1" -->
        <!-- android:gravity="center" -->
        <!-- android:orientation="vertical" > -->

        <ImageView
            android:id="@+id/imageViewRotate"
            android:layout_marginTop="20dp"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:background="@drawable/music_jump" />
        <!-- </LinearLayout> -->

        <com.ledble.view.VolumCircleBar
            android:id="@+id/volumCircleBar"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/micro_stop"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llDecibel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/decibel"
                android:textColor="@android:color/white" />

            <SeekBar
                android:id="@+id/seekBarDecibel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="80"
                android:thumb="@drawable/slider_thumb" />

            <TextView
                android:id="@+id/tvDecibelValue"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2" >

                <com.common.view.ScrollForeverTextView
                    android:id="@+id/textViewAutoAjust"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop ="20dp"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:background="@color/transparent"
                    android:textColor="@color/text_color_blue" />
                
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center" >

                <!-- <ProgressBar -->
                <!-- android:id="@+id/progressBar1" -->
                <!-- style="?android:attr/progressBarStyleHorizontal" -->
                <!-- android:layout_width="fill_parent" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:max="100" -->
                <!-- android:progress="0" /> -->

                <SeekBar
                    android:id="@+id/seekBarMusic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:thumb="@drawable/slider_thumb" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" >

                <TextView
                    android:id="@+id/tvCurrentTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvTotalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imageViewPlayType"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/margin_content"
                    android:src="@drawable/playtype_loopall" />

                <ImageView
                    android:id="@+id/imageViewPre"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/margin_content"
                    android:src="@drawable/bg_play_pre" />

                <ImageView
                    android:id="@+id/imageViewPlay"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="@dimen/margin_content"
                    android:src="@drawable/bg_play" />

                <ImageView
                    android:id="@+id/imageViewNext"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/margin_content"
                    android:src="@drawable/bg_play_next" />

                <Button
                    android:id="@+id/buttonMusicLib"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/margin_content"
                    android:background="@drawable/play_queue" />

                
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>